Wolof: minor corrections
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106871 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/wo/channelsposter.lang
+++ b/wo/channelsposter.lang
@@ -35,7 +35,7 @@ Testeel sumbu Firefox bii di ñëw ci dëgaraay
 
 
 ;Mostly stable builds that need fine tuning and majority add-on compatibility
-Mostly stable builds that need fine tuning and majority add-on compatibility {ok}
+Dañu sola defar bu taxaw
 
 
 ;Everyone! Released to the more than 400 million Firefox users worldwide
@@ -103,7 +103,7 @@ Gennub Firefox!
 
 
 ;Timeline
-Timeline {ok}
+Rëddu diir
 
 
 ;Release
