--- a/wo/firefoxlive.lang
+++ b/wo/firefoxlive.lang
@@ -31,7 +31,7 @@ Ndimbal wideyoo
 
 
 ;Do you like baby animals? Mozilla Firefox is streaming video of their 3 adopted red panda babies. Spread the word and 'share' with your friends.
-Ndax bëgg nga doomi mala? Mozilla dexu wideyoo ci 3 xale panda yu xonk Tasaareel xibaar bi te wax ko say xarit.
+Ndax bëgg nga doomi mala? Mozilla baawaanu wideyoo la ci 3 xale panda yu xonk 'Tasaarel' xibaar bi te wax ko say xarit.
 
 
 ;What is more endearing? Firefox’s non-profit mission or a live feed of their animal mascot? Find out http://mzl.la/sPo5yu
