--- a/wo/foundationsection.lang
+++ b/wo/foundationsection.lang
@@ -71,7 +71,7 @@ ReMo ayu besu liggéey ci Paris
 
 
 ;Mozilla Meetup, Brazil
-Mozilla Meetup, Brazil {ok}
+Mozilla Meetup, Barasil
 
 
 ;Arabic Mozilla
