--- a/wo/main.lang
+++ b/wo/main.lang
@@ -363,7 +363,7 @@ Firefox bu telefon
 
 
 ;Email
-Email {ok}
+Imeel
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
@@ -391,7 +391,7 @@ Soxla nga yeesal! Nga am kaarange ci simili. <br/> Tambalil jëriñoo sa Firefox
 
 
 ;You're using an older version of Firefox. Get <a href="%s">your update</a> to stay safe! <br/> Experience the latest features, security fixes and the fastest Firefox yet. Download the free upgrade in less than a minute.
-Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg. Jëlal<a href="%s">sa yeesal</a>ngir am kaarange! <br/> Seetal bees bees yi, kaarange ak firefox bi gëna gaaw. Yebal yeesal yi kenn jaayul ci lu mëtul simili.
+Yaa ngiy jëfandikoo ak sumbu Firefox bu yagg. Jëlal <a href="%s">sa yeesal</a> ngir am kaarange! <br/> Seetal bees bees yi, kaarange ak firefox bi gëna gaaw. Yebal yeesal yi kenn jaayul ci lu mëtul simili.
 
 
 ;Upgrade now
