--- a/wo/marketplace/partners.lang
+++ b/wo/marketplace/partners.lang
@@ -55,7 +55,7 @@ Marse Mozila— <em>Dina ubbi leegi</em>
 
 
 ;Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time.
-Using open Web standards and Mozilla-designed APIs, great app experiences can be delivered across multiple platforms, devices and operating systems — closing the gap between Web and native apps for the first time. {ok}
+Jëfandikoo estandaar yi amul moomeel ak Mozilla, jëfgisu jëfekaay yu mag mën leen am ci dend yu bari, aparey ak ay doxalin, loolu mën fatt pax mi nekk ci web ak jëfekaay juddu su fekkeeni yaa ngiy soga door.
 
 
 ;Test your app with a committed group of early adopters.
