--- a/wo/mozorg/contribute.lang
+++ b/wo/mozorg/contribute.lang
@@ -35,7 +35,7 @@ Ndax bëgg nga dimmali?
 
 
 ;YOUR EMAIL HERE
-SA EMAIL FII
+SA IMEEL FII
 
 
 ;Submit&nbsp;»
@@ -99,7 +99,7 @@ Testu baaxaay ci yoon yi gëna yomb ci door Mozilla ak miin suulaale yi ak jumtu
 
 
 ;Help us <a href="http://quality.mozilla.org/teams/desktop-firefox/">hunt down bugs</a> in Firefox, <a href="http://quality.mozilla.org/teams/web-qa/">test Mozilla web sites</a> or learn more about <a href="http://quality.mozilla.org/">other testing opportunities</a>.
-Dimmalileen ñu <a href="http://quality.mozilla.org/teams/desktop-firefox/">daq bug yi</a>ci firefox, <a href="http://quality.mozilla.org/teams/web-qa/">dalu test  Mozilla</a> walla jàng bu baax <a href="http://quality.mozilla.org/">ak yeneen</a>.
+Dimmali leen ñu <a href="http://quality.mozilla.org/teams/desktop-firefox/">daq bug yi</a> ci firefox, <a href="http://quality.mozilla.org/teams/web-qa/">dalu test  Mozilla</a> walla jàng bu baax <a href="http://quality.mozilla.org/">ak yeneen</a>.
 
 
 ;Coding
