--- a/wo/newsletter.lang
+++ b/wo/newsletter.lang
@@ -83,7 +83,7 @@ Suñu yeneen xibaarukaay:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Amal pexe yi mujj gir mëna Jëfandikoo bu baax sajoowkat bi nga taamu.
+Amal pexe yi mujj gir mëna Jëfandikoo bu baax sa joowkat bi nga taamu.
 
 
 ;Firefox Mobile
@@ -179,7 +179,7 @@ Xibaarukaay Mozilla
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Jërajëf! xoolal sa boyetu mail ngir dëggal sa takkoo.
+Jërajëf! xoolal sa boyetu meel ngir dëggal sa takkoo.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
