--- a/wo/press.lang
+++ b/wo/press.lang
@@ -23,4 +23,4 @@ Ku bëgg gise walla beneen laaj ci mejaa, nga jokkoo:
 
 
 ;press at mozilla dot com
-press at mozilla dot com {ok}
+press ci mozilla tomb com
