--- a/wo/videos/video_evernote.lang
+++ b/wo/videos/video_evernote.lang
@@ -47,7 +47,7 @@ japp xët yi muy gis te di la ko fatali
 
 
 ;even when they are offline and they don’t have access to the Internet.
-ndare da nga nekkul ci rëdd te mënuloo jot ci internet.
+ndare da nga nekkul ci rëdd te mënuloo jot ci Internet.
 
 
 ;Using modern web technologies lets us give the best and richest experience we can for our users.
