--- a/wo/videos/video_fx13.lang
+++ b/wo/videos/video_fx13.lang
@@ -35,7 +35,7 @@ Cuqal ci pinees bi ngir xomb dal bi ci fi mu ne, walla butoŋ 'X' boo bëggee ne
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-Mën nga cuq itam ci njunju 'taf' te ne ci kaw ci ndeyjooru xët wi boo bëggee dellusi ci xëtu koñ bu bees bu dara nekkul.
+Mën nga cuq itam ci njunju 'caax' te ne ci kaw ci ndeyjooru xët wi boo bëggee dellusi ci xëtu koñ bu bees bu dara nekkul.
 
 
 ;Get the latest Firefox now and start using these new features today!
