--- a/wo/videos/video_teambox.lang
+++ b/wo/videos/video_teambox.lang
@@ -99,4 +99,4 @@ Luy tax ñu gën ñu gis, ñu gëna am gëdda ci marse bi
 
 
 ;and we’re really excited about it, we’re looking forward to it.
-and we’re really excited about it, we’re looking forward to it. {ok}
+te ñun ñepp dafa ñu yëngël, te yakamtinañu ko.
