--- a/wo/mozspaces.lang
+++ b/wo/mozspaces.lang
@@ -3,7 +3,7 @@ Dendi Mozilla
 
 
 ;Mountain View
-Mountain View {ok}
+Gisgis bu ubbeeku
 
 
 ;Address:
@@ -11,7 +11,7 @@ Makkaan:
 
 
 ;E-mail:
-E-mail: {ok}
+Imeel:
 
 
 ;Twitter:
@@ -23,7 +23,7 @@ IRC: {ok}
 
 
 ;Auckland
-Auckland {ok}
+Okland
 
 
 ;The first of our new spaces. We opened our doors in New Zealand in July 2011.
@@ -31,11 +31,11 @@ Sunu dend bi jëkk. Ñi ngi ubbi suñuy bunt ci New Zeland ci Sulet 2011.
 
 
 ;Beijing
-Beijing {ok}
+Beejing
 
 
 ;Paris
-Paris {ok}
+Pari
 
 
 ;The Paris space will be moving to a bigger location. Site visits are happening in December 2011 and we're targeting to open the new space in the second quarter of 2012.
@@ -43,7 +43,7 @@ Dendu Paris dafa gëna rëy. Dal yu bari gane nañu leen ci ci desambar 2011, ñ
 
 
 ;San Francisco
-San Francisco {ok}
+San Faransisko
 
 
 ;We are excited to announce that our new San Francisco space was launched in September 2011 right on the Embarcadero.
@@ -59,7 +59,7 @@ Ut 2011 ci la ñu ubbi sunu dendu Mozilla ci Toronto, mottaliko ak xaatim masin 
 
 
 ;Vancouver
-Vancouver {ok}
+Vankuwë
 
 
 ;We are in the process of revamping our Vancouver space. We’re staying in the same building, just expanding to incorporate a new community area that will launch early in 2012. Hope to see you there!
@@ -79,11 +79,11 @@ Berlin {ok}
 
 
 ;The search is under way! Stay tuned for updates on tours, building locations and construction kick-off. We’re targeting to open our doors in the second half of 2012.
-Wut baa ngi ci yoon! degluleen ci yeesal yi ci gane yi, fi dend yi nekk. Bëgg nañu ubbi ci ñaareelu xaaj bu 2012.
+Wut baa ngi ci yoon! Degluleen ci yeesal yi ci gane yi, fi dend yi nekk. Bëgg nañu ubbi ci ñaareelu xaaj bu 2012.
 
 
 ;Taipei
-Taipei {ok}
+Taype
 
 
 ;We’ll be launching our Taipei space in 2012. Stay tuned for more details.
