--- a/wo/snippets.lang
+++ b/wo/snippets.lang
@@ -3,7 +3,7 @@ Jëlal Firefox fépp foo mëna dem! Firefox bu Android bu mujj pare na. <a href=
 
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
-Leegi am nga sumb bi mujj,<a href="%s">jàngal ci mbiri</a> yu baax yi nga mëna def ak sa Firefox.
+Leegi am nga sumb bi mujj, <a href="%s">jàngal ci mbiri</a> yu baax yi nga mëna def ak sa Firefox.
 
 
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
@@ -35,7 +35,7 @@ Gaaw, am kaarange, Firefox moon rekk mooy joowkat bi lay tek ci kanam. <a href="
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
-<a href="%s">Yebal Firefox ci sa Android tabalet</a>te am doole web bi say loxo. Jël ko leegi.
+<a href="%s">Yebal Firefox ci sa Android tabalet</a> te am doole web bi say loxo. Jël ko leegi.
 
 
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
@@ -55,7 +55,7 @@ Amul ñaari jëfandikookat yu niroo. <a href="%s">yokkal butoŋ bu la neex ci sa
 
 
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
-Solalal sa Firefox ak Personas. Jaar ci kaw ngir jéem, cuq ci def. Walla nga gane <a href="%s">galëri</a>alfajune yoon!
+Solalal sa Firefox ak Personas. Jaar ci kaw ngir jéem, cuq ci def. Walla nga gane <a href="%s">galëri</a> alfajune yoon!
 
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
@@ -119,7 +119,7 @@ Jëfandikoo Firefox ci ordinatëër yu bari? Leegi mën nga jokkalante say modil
 
 
 ;Fast, fast, fast. <a %s>Firefox for Android just got a big upgrade</a>. Help us spread the word.
-Gaawalagaaw.<a %s> Firefox bu Android am yeesal bu mag</a>, dimmali ñu tasaare mbir moomule.
+Gaawalagaaw. <a %s> Firefox bu Android am yeesal bu mag</a>. Dimmali ñu tasaare mbir moomule.
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
