--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -130,18 +130,18 @@ Rápido, rápido, rápido. <a %s>Firefox p'Android acaba d'anovase</a>. Ayúdano
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+¿Préstate Firefox Beta? <a href="%s">Invita a los tos collacios</a> a que descubran cómo va ser el futuru de Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Uso Firefox Beta pa descubrir cómo van ser les caberes carauterístiques ya innovaciones que van integrase en Firefox. <a href="%s">Compruébalo</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Gracies por usar Firefox Beta y ayudanos a que Firefox seya aínda más ablucante. <a href="%s">Invita a los tos collacios</a> a que lu prueben.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Uso Firefox Beta p'ayudar a probar les caberes carauterístiques y facer que Firefox seya entá más ablucante. <a href="%s">Pruébalu</a>.
 
 
