--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -130,19 +130,19 @@ Firefox для Android теперь оптимизирован для работ
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Нравится Firefox Бета? <a href="%s">Пригласите своих друзей</a> заглянуть в будущее Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Я использую Firefox Бета, чтобы оценить последние возможности и новинки, которые скоро появятся в Firefox. <a href="%s">Попробуй его</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Спасибо, что используете Firefox Бета, чтобы помочь сделать Firefox ещё лучше. Вы можете <a href="%s">пригласить своих друзей</a> испытать его в работе.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Я использую Firefox Бета, чтобы помочь протестировать новейшие возможности и сделать Firefox ещё лучше. <a href="%s">Испытай его в работе</a>.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
