Bug 760528 - [nb-NO] Translate Whats New page for Firefox 13 + vido
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106906 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nb-NO/whatsnew.lang
+++ b/nb-NO/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurra! Din Firefox er oppdatert.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Din Firefox er utdatert.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Av sikkerhetshensyn anbefaler vi at du oppgraderer til den <a href="{url}">nyeste og beste versjonen</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Du bruker en ukjent versjon av Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Av sikkerhetshensyn anbefaler vi at du laster ned den <a href="{url}">nyeste og beste versjonen</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Gå videre til neste oppgave<br/>raskere enn noen gang
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Se hvordan de nye funksjonene i Firefox hjelper deg å bruke nettet raskere og mer effektivt.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Les mer om <a href="{url}">Ny Fane-funskjonen »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Les mer om den <a href="{url}">redesignede startsiden »</a>
 
 
 ;Keep in touch
-Keep in touch
+Hold kontakten
 
 
 ;Keep it moving
-Keep it moving
+Vær på farten
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Last ned Firefox » <b>for Android</b>
 
 
 ;Keep it going
-Keep it going
+Hold det i gang
 
 
 ;Join Mozilla
-Join Mozilla
+Bli en del av Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android-roboten ble gjenskapt av arbeid som er laget og <a href="%s">delt av Google</a> og brukt i henhold til betingelsene i <a href="%s">Creative Commons 3.0 Attribution-lisensen</a>.
 
 
