--- a/nb-NO/videos/video_fx13.lang
+++ b/nb-NO/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Hva er nytt i Firefox] Det er nå enklere og raskere å komme dit du vil med den nyeste versjonen av Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Den redesignede startsiden lar deg enkelt få tilgang til de oftest brukte menyvalgene.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Som nedlastinger, bokmerker, historikk, utvidelser, sync, og innstillinger.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Ny fane-siden] Vi har også forbedret siden som åpnes når du lager en ny fane.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Fra Ny Fane-siden kan du nå enkelt gå til de nylig og mest besøkte sidene med ett trykk.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+For å starte bruke den nye Ny Fane-siden, trykk '+'-tegnet øverst i nettleseren.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Ny Fane-siden vil nå vise miniatyrbilder av de nylig og sist brukte nettsidene fra adresselinje-historikken.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Du kan tilpasse Ny Fane-siden ved å dra miniatyrbildene rundt for å endre rekkefølgen.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Trykk på kartnålen for å låse nettstedet til der det er, eller 'X'-knappen for å fjerne et nettsted.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Du kan også trykke på 'rutenett'-ikonet øverst til høyre på siden for å gå tilbake til en tom fane-side.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Last ned den nyeste Firefox-versjonen nå, og start å bruke disse nye funksjonene i dag!
