The latest update of the strings for Bosnian locale
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106908 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bs/videos/video_fx13.lang
+++ b/bs/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Šta je novo u Firefoxu] Sada je lakše i brže ići gdje želite sa najnovijim Firefoxom.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Pomoću redizajnirane početne stranice sada možete jednostavno pristupiti najčešće korištenim opcijama iz menija.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Poput preuzimanja, zabilješki, historije, add-ona, synca i postavki.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Novi tab stranica] Takođe smo unaprijedili i vašu Novi tab stranicu.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Pomoću Novi tab stranice, sada možete brzo i jedstavno posjetiti svoje nedavno i najčešće posjećene web stranice sa samo jednim klikom.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Da počnete koristiti Novi tab stranicu, kreirajte novi tab klikom na '+' na vrhu vašeg browsera.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Novi tab stranice će sada pokazivati thumbnaile vaših nedavno i najčešće posjećenih web stranica iz vaše Awesome Bar historije.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Možete prilagoiti vašu Novi tab stranicu razmještanjem thumbnaila po njoj kako biste im podesili raspored.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Kliknite pribadaču da zaključate stranicu na mjesto, ili 'X' dugme da uklonite stranicu.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Takođe možete klinuti na ikonicu 'mreže' u gornjem desnom uglu stranice da biste se vratili na praznu stranicu novog taba.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Preuzmite najnoviji Firefox već sada i počnite koristiti ove nove mogućnosti još danas!
