--- a/ms/download.lang
+++ b/ms/download.lang
@@ -1,5 +1,5 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
+Mozilla Firefox, pelayar web percuma, adalah dibina oleh global non-profit didedikasi untuk meletakkan individu-individu dalam 
 
 
 ;Different by Design
