--- a/kk/videos/video_fx13.lang
+++ b/kk/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Firefox-тың жаңалықтары] Ал енді, соңғы Firefox-пен сіз тез әрі оңай қалаған жеріңізге бара аласыз.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Жаңартылған үй парағын қолданып, сіз жиі қолданатын мәзір бөлімдеріне оңай рұқсат аласыз.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Жүктемелер, бетбелгілер, тарих, кеңейтулер, синхрондау және баптаулар секілді.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Жаңа бет парағы] Біз сіздің жаңа бет парағына жаңартуларды қостық.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Жаңа бет парағымен сіз енді соңғы және көбірек қаралған сайттарды бір шертумен тез таба аласыз.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Жаңа бет парағын қолдану үшін, сіздің браузердің үстіңгі жағындағы '+' басып, жаңа бетті құрыңыз.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Енді жаңа бет парағында, сіздің ақылды адрестің жолынан соңғы және көбірек қаралған сайттардың миниатюралары көрсетіледі.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Миниатюраларды сізге керекті ретінде тасып, сіз жаңа бет парағын баптай аласыз.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Сайтты бекіту үшін кеңсе кнопканы басыңыз,немесе 'X' түймені басып, сайтты өшіріңіз.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Сіз оң жақ жоғарғы бұрышындағы «торша» белгіні басу арқылы да жаңа бет парағын аша аласыз.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Соңғы Firefox-ты қазір алыңыз да жаңа мүмкіндітерді қолдануға бастаңыз!
