--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -130,19 +130,19 @@ Firefox ima nove mogućnosti koje će vas do vašeg idućeg zadatka dovesti brž
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Sviđa vam se Firefox Beta? <a href="%s">Pozovite svoje prijatelje</a> da upoznaju nove mogućnosti koje će uskoro stići u Firefox.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Koristim Firefox Beta zbog najnovijih mogućnosti i inovacija koje će stići u novi Firefox. <a href="%s">Isprobaj ga</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Hvala što koristite Firefox Beta kako biste Firefox učinili još boljim. <a href="%s">Pozovite svoje prijatelje</a> da ga i oni isprobaju.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Koristim Firefox Beta zbog testiranja najnovijih mogućnosti čime pomažem usavršiti idući Firefox. <a href="%s">Isprobaj Firefox Beta</a>.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
