l10n: mr, translation update by sandeep shedmake
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106928 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -130,18 +130,18 @@
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+फायरफॉक्स बिटा पसंत आहे? फायरफॉक्समध्ये काय लवकर येत आहे याची झलक पहण्यासाठी <a href="%s">मित्रांना आमंत्री करा</a>.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+फायरफॉक्समध्ये लवकरच येणाऱ्या नवीन गुणविशेष व नाविन्यची झलक पहण्यासाठी मी फायरफॉक्स बिटाचा वापर करतो. <a href="%s">तपासून पहा</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+फायरफॉक्सला आणखी उत्तकृष्ट करण्यासाठी, फायरफॉक्स बिटाचा वापर केल्याबद्दल धन्यवाद. वापरून पहाण्यासाठी <a href="%s">आपल्या मित्रांना आमंत्रीत करा</a>.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+नवीन गुणविशेषांची चाचणी करणे व फायरफॉक्सला आणखी उत्तकृष्ट बनवण्यासाठी मी फायरफॉक्स बिटाचा वापर करतो. <a href="%s">वापरून पहा</a>.
 
 
