Afrikaans: fully translated whatsnew.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106930 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/whatsnew.lang
+++ b/af/whatsnew.lang
@@ -1,63 +1,58 @@
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
-
-
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Jippie! Firefox is op datum.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox is nie op datum nie
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Vir sekuriteitsredes beveel ons aan dat u opgradeer na die <a href="{url}">jongste weergawe</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+U gebruik 'n onbekende weergawe van Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Vir sekuriteitsredes beveel ons aan dat u die <a href="{url}">jongste weergawe</a> aflaai.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Gaan vinniger as ooit<br/>oor na die volgende taak
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Sien hoe die nuwe funksies in Firefox help om vinniger en meer effektief te blaai.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Leer meer oor <a href="{url}">die "Nuwe oortjie"-funksie »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Leer meer oor ons <a href="{url}">herontwerpte tuisblad »</a>
 
 
 ;Keep in touch
-Keep in touch
+Hou kontak
 
 
 ;Keep it moving
-Keep it moving
+Bly in beweging
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Kry Firefox » <b>vir Android</b>
 
 
 ;Keep it going
-Keep it going
+Versprei die nuus
 
 
 ;Join Mozilla
-Join Mozilla
+Sluit by Mozilla aan
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Die Android-robot is geherproduseer vanaf werk geskep en <a href="%s">gedeel deur Google</a> en word gebruik volgens die voorwaardes wat beskryf word in die <a href="%s">Creative Commons 3.0 Erkenning-Lisensie</a>.
