Afrikaans: one string translated
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106932 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/af/snippets.lang
+++ b/af/snippets.lang
@@ -1,6 +1,3 @@
-# these text snippets are mostly used on about:home
-
-
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Neem Firefox oral saam! Die jongste Firefox vir Android is gereed om te gebruik en te geniet. <a href="%s">Kry dit nou.</a>
 
@@ -82,7 +79,7 @@ Laai Firefox af vir ’n Android-tablet en ervaar die krag van die Web in u eie 
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Laai Firefox Beta af</a>, gee terugvoer en help om die volgende Firefox selfs nog beter te maak vir ons 450 miljoen gebruikers.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
@@ -143,5 +140,3 @@ Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
 I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-
-
