--- a/pt-BR/videos/video_kicksend.lang
+++ b/pt-BR/videos/video_kicksend.lang
@@ -1,3 +1,118 @@
-The fact that we can update very easily and actually provide services through the browser that gives our app special permissions is something that is also a no-brainer
+;The problem with file sharing right now is that not one solution
+The problem with file sharing right now is that not one solution
 
-It took us may 15 minutes to bundle our app up and publish it to the Marketplace and ever since then we pushed out a few releases already and it was a very smooth experience.
+
+;provides a really, really good experience for non technical users.
+provides a really, really good experience for non technical users.
+
+
+;With Kicksend you can send files to any of your friends,
+With Kicksend you can send files to any of your friends,
+
+
+;of any size, just by dragging and dropping onto the web
+of any size, just by dragging and dropping onto the web
+
+
+;and you can put in an email address
+and you can put in an email address
+
+
+;and that file gets delivered directly to your friends.
+and that file gets delivered directly to your friends.
+
+
+;We decided to go the native route because we want to provide
+We decided to go the native route because we want to provide
+
+
+;a really good experience that people are used to on iPhone and Android
+a really good experience that people are used to on iPhone and Android
+
+
+;but at the same time, we still want to provide
+but at the same time, we still want to provide
+
+
+;the same great experience on the mobile web.
+the same great experience on the mobile web.
+
+
+;HTML5 allows us to be on multiple platforms
+HTML5 allows us to be on multiple platforms
+
+
+;without having to worry about dependencies on each of these platforms.
+without having to worry about dependencies on each of these platforms.
+
+
+;Developing in HTML5 really helps us provide the features that
+Developing in HTML5 really helps us provide the features that
+
+
+;our users need to be able to send files really easily through the web.
+our users need to be able to send files really easily through the web.
+
+
+;We try to be on every single mobile platform
+We try to be on every single mobile platform
+
+
+;We do have native applications on iPhone and Android
+We do have native applications on iPhone and Android
+
+
+;but we do realize that the rest of the world
+but we do realize that the rest of the world
+
+
+;can use HTML5 to access Kicksend wherever they are.
+can use HTML5 to access Kicksend wherever they are.
+
+
+;The Mozilla Marketplace, I mean, first off it gives you massive distribution
+The Mozilla Marketplace, I mean, first off it gives you massive distribution
+
+
+;because everybody who is using Firefox will essentially be using it.
+because everybody who is using Firefox will essentially be using it.
+
+
+;And there is also a mobile aspect to it that
+And there is also a mobile aspect to it that
+
+
+;is going to push our mobile HTML5 app to many, many millions of users
+is going to push our mobile HTML5 app to many, many millions of users
+
+
+;and that’s a no-brainer at that point.
+and that’s a no-brainer at that point.
+
+
+;The fact that we can update very easily
+The fact that we can update very easily
+
+
+;and actually provide services through the browser
+and actually provide services through the browser
+
+
+;that gives our app special permissions is something that is also a no-brainer
+that gives our app special permissions is something that is also a no-brainer
+
+
+;It took us may 15 minutes to bundle our app up and publish it
+It took us may 15 minutes to bundle our app up and publish it
+
+
+;to the Marketplace and ever since then we pushed out
+to the Marketplace and ever since then we pushed out
+
+
+;a few releases already and it was a very smooth smooth experience.
+a few releases already and it was a very smooth smooth experience.
+
+
+;distribute your apps
+distribute your apps
