Update latest 4 lines
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106944 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -130,18 +130,18 @@ Firefox bevat nieuwe functies die u nog sneller naar uw volgende taak brengen! <
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Gek op Firefox Bèta? <a href="%s">Nodig uw vrienden uit</a> voor een sneak peek van wat er eerdaags in Firefox komt.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ik gebruik Firefox Bèta om een sneak peek te krijgen van de nieuwste functies en innovaties die eerdaags in Firefox komen. <a href="%s">Bekijk het zelf</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Bedankt voor het gebruiken van Firefox Bèta om te helpen Firefox nog geweldiger te maken. <a href="%s">Nodig uw vrienden uit</a> om het te proberen.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ik gebruik Firefox Bèta om de nieuwste functies te helpen testen en Firefox nog geweldiger te maken. <a href="%s">Probeer het zelf</a>.
 
 
