l10n: kicksend pt-BR subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106950 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/pt-BR/videos/video_kicksend.lang
+++ b/pt-BR/videos/video_kicksend.lang
@@ -1,118 +1,89 @@
 ;The problem with file sharing right now is that not one solution
-The problem with file sharing right now is that not one solution
-
+O problema com o compartilhamento de arquivos hoje é que nenhuma solução
 
 ;provides a really, really good experience for non technical users.
-provides a really, really good experience for non technical users.
-
+oferece uma experiência realmente boa para usuários não técnicos.
 
 ;With Kicksend you can send files to any of your friends,
-With Kicksend you can send files to any of your friends,
-
+Com o Kicksend você pode enviar arquivos para quaisquer amigos,
 
 ;of any size, just by dragging and dropping onto the web
-of any size, just by dragging and dropping onto the web
-
+de qualquer tamanho, apenas arrastando e soltando na web
 
 ;and you can put in an email address
-and you can put in an email address
-
+e você pode inserir o seu endereço de e-mail
 
 ;and that file gets delivered directly to your friends.
-and that file gets delivered directly to your friends.
-
+e aquele arquivo será distribuído diretamente para seus amigos.
 
 ;We decided to go the native route because we want to provide
-We decided to go the native route because we want to provide
-
+Nós decidimos seguir a rota de aplicativos nativos porque queríamos oferecer
 
 ;a really good experience that people are used to on iPhone and Android
-a really good experience that people are used to on iPhone and Android
-
+uma experiência realmente boa para aqueles acostumados ao iPhone ou Android
 
 ;but at the same time, we still want to provide
-but at the same time, we still want to provide
-
+mas ao mesmo tempo, nós queríamos oferecer
 
 ;the same great experience on the mobile web.
-the same great experience on the mobile web.
-
+a mesma ótima experiência na web móvel.
 
 ;HTML5 allows us to be on multiple platforms
-HTML5 allows us to be on multiple platforms
-
+O HTML5 nos permite estar em múltiplas plataformas
 
 ;without having to worry about dependencies on each of these platforms.
-without having to worry about dependencies on each of these platforms.
-
+sem precisar se preocupar com dependências de cada umas dessas plataformas.
 
 ;Developing in HTML5 really helps us provide the features that
-Developing in HTML5 really helps us provide the features that
-
+Desenvolver com HTML5 realmente nos ajuda a oferecer recursos que
 
 ;our users need to be able to send files really easily through the web.
-our users need to be able to send files really easily through the web.
-
+nossos usuários precisam para poderem enviar arquivos facilmente pela web.
 
 ;We try to be on every single mobile platform
-We try to be on every single mobile platform
-
+Nós tentamos estar em toda e qualquer plataforma móvel
 
 ;We do have native applications on iPhone and Android
-We do have native applications on iPhone and Android
-
+Nós criamos aplicativos nativos para iPhone e Android
 
 ;but we do realize that the rest of the world
-but we do realize that the rest of the world
-
+mas percebemos que o resto do mundo pode usar
 
 ;can use HTML5 to access Kicksend wherever they are.
-can use HTML5 to access Kicksend wherever they are.
-
+o HTML5 para acessar o Kicksend onde estiver.
 
 ;The Mozilla Marketplace, I mean, first off it gives you massive distribution
-The Mozilla Marketplace, I mean, first off it gives you massive distribution
-
+O Mozilla Marketplace, de cara já oferece distribuição em massa
 
 ;because everybody who is using Firefox will essentially be using it.
-because everybody who is using Firefox will essentially be using it.
-
+porque todos usando o Firefox o estarão essencialmente usando.
 
 ;And there is also a mobile aspect to it that
-And there is also a mobile aspect to it that
-
+E há também o aspecto móvel, que vai impulsionar
 
 ;is going to push our mobile HTML5 app to many, many millions of users
-is going to push our mobile HTML5 app to many, many millions of users
-
+nosso aplicativo móvel HTML5 para muitos, muitos milhões de usuários
 
 ;and that’s a no-brainer at that point.
-and that’s a no-brainer at that point.
-
+e nesse momento isso é uma certeza.
 
 ;The fact that we can update very easily
-The fact that we can update very easily
-
+O fato de podermos atualizar com muita facilidade
 
 ;and actually provide services through the browser
-and actually provide services through the browser
-
+e de fato fornecer serviços usando o navegador que
 
 ;that gives our app special permissions is something that is also a no-brainer
-that gives our app special permissions is something that is also a no-brainer
-
+dá ao nosso aplicativo permissões especiais é algo incrível
 
 ;It took us may 15 minutes to bundle our app up and publish it
-It took us may 15 minutes to bundle our app up and publish it
-
+Levamos em torno de 15 minutos para empacotar nosso aplicativo e publicá-lo
 
 ;to the Marketplace and ever since then we pushed out
-to the Marketplace and ever since then we pushed out
-
+no Marketplace e desde então nós publicamos algumas versões
 
 ;a few releases already and it was a very smooth smooth experience.
-a few releases already and it was a very smooth smooth experience.
-
+e foi uma experiência muito agradável.
 
 ;distribute your apps
-distribute your apps
+distribua seus aplicativos
