Done translation for file dowload dot lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106963 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/download.lang
+++ b/ms/download.lang
@@ -1,38 +1,39 @@
 ;Mozilla Firefox, free web browser, is created by a global non-profit dedicated to putting individuals in control & shaping the future of the web for the public good.
-Mozilla Firefox, pelayar web percuma, adalah dibina oleh global non-profit didedikasi untuk meletakkan individu-individu dalam 
+Mozilla Firefox, pelayar web percuma, adalah dibina oleh global non-profit didedikasi untuk meletakkan individu-individu dalam menjaga dan membentuk masa depan web untuk kegunaan awam.
 
 
 ;Different by Design
-Different by Design
+Kelainan oleh reka bentuk
 
 
 ;Proudly <span>non-profit</span>
-Proudly <span>non-profit</span>
+Dengan bangga <span>non-profit</span>
 
 
 ;Innovating <span>for you</span>
-Innovating <span>for you</span>
+Menginovasi <span>untuk anda</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Fast, flexible, <span>secure</span>
+Pantas, fleksible, <span>selamat</span>
 
 
 ;Thanks for choosing Firefox!
-Thanks for choosing Firefox!
+Terima kasih kerana memilih Firefox!
 
 
 ;Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
-Your download should automatically begin in a few seconds, but if not, <a href="%s">click here</a>.
+Muat turun anda akan bermula secara automatik dalam beberapa saat, jika tidak, <a href="%s">click here</a>.
 
 
 ;As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
 As a non-profit, we’re free to innovate on your behalf without any pressure to compromise. You’re going to love the difference.
+Sebagai sebuah non-profit, kami adalah bebas menginovasi kepada pihak anda tanpa sebarang tekanan untuk kompromasi. Anda akan sukakan kelainannya.
 
 
 ;Welcome to the only browser <em>that puts you first.</em>
-Welcome to the only browser <em>that puts you first.</em>
+Selamat datang ke pelayar Web satu-satunya <em>meletakkan anda sebagai yg pertama.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox Pelayar Web
