fix a string for file main dot lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106964 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ms/main.lang
+++ b/ms/main.lang
@@ -270,7 +270,7 @@ Sila baca Polisi Privasi Mozilla dan setuju dengan menandakan kotak dibawah.
 Sila mengisi alamat emel anda dan semak Polisi Privasi Mozilla
 
 ;Mobile
-Mobile
+Mobile {ok}
 
 
 ;Firefox Updated
