--- a/ms/firefoxtesting.lang
+++ b/ms/firefoxtesting.lang
@@ -13,7 +13,7 @@ Muat turun dan uji Firefox keluaran akan datang. Rasa pengalaman inovasi-inovasi
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta {ok}
 
 
 ;Firefox Beta for:
@@ -49,7 +49,6 @@ Failkan "bugs" untuk membantu kami dan meletakkan pembetulan terakhir pada kemam
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
 Berikan impak kepada versi seterusnya daripada Firefox dan 450 million orang akan menggunakannya setiap hari.
 
 ;Supported devices
