--- a/ms/home.lang
+++ b/ms/home.lang
@@ -1,49 +1,49 @@
 # common strings for all pages
 
 ;Personalize
-Personalize
+Personalisasi
 
 ;One size doesn’t fit all.
-One size doesn’t fit all.
+Satu saiz yang tidak sesuai untuk semua
 
 ;Go Fast
-Go Fast
+Gerak Pantas
 
 ;Accelerate the way you use the web.
-Accelerate the way you use the web.
+Percepatkan dengan cara anda gunakan web.
 
 ;Stay Safe
-Stay Safe
+Bertindak selamat
 
 ;We’ve got your back.
-We’ve got your back.
+Kami ada belakang anda. 
+
 
 ;Get Firefox on your phone!
-Get Firefox on your phone!
-
+Dapatkan Firefox pada telefon mudah alih anda!
 
 # Social media page strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/socialmedia
 
 ;Made for sharing.
-Made for sharing.
+Dicipta untuk dikongsi
 
 ;Create <br/> dedicated <br/> tabs for it
-Create <br/> dedicated <br/> tabs for it
+Bina <br/> didedikasikan <br/> tab-tab untuk ia
 
 ;Customize <br/> to make <br/> it faster
-Customize <br/> to make <br/> it faster
+Kustomisasi <br/> untuk buatkan <br/> ia lebih pantas
 
 ;Get add-ons <br/> and make <br/> it easier
-Get add-ons <br/> and make <br/> it easier
+Dapatkan addon <br/> dan lakukan <br/> ia lebih mudah
 
 
 # Worker strings: http://www-trunk.stage.mozilla.com/en-GB/firefox/worker
 
 ;Works harder so <br /> you don't have to.
-Works harder so <br /> you don't have to.
+Kerja lebih keras dimana <br /> anda tidak perlukan ia.
 
 ;Increased <br/> speed
-Increased <br/> speed
+Tambahkan <br/> speed
 
 
 ;Easy to <br/> access tabs
