Adding missing file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106989 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bs/download.lang
+++ b/bs/download.lang
@@ -35,6 +35,6 @@ Dobrodošli u jedini browser <em>koji stavlja Vas na prvo mjesto.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox Web Browser {ok}
 
 
