--- a/bs/newsletter.lang
+++ b/bs/newsletter.lang
@@ -178,18 +178,18 @@ Hvala što ste nam rekli zašto odlazite.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla Newsletteri
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Hvala! Molimo da posjetite svoj inbox i potvrdite svoju prijavu.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Primit ćete email od mozilla@e.mozilla.org da potvrdite vašu prijavu. Ukoliko ga ne vidite, provjerite vaš spam filter. Morate potvrditi svoju prijavu da biste dobijali naš newsletter.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Molimo da dodate našu adresu: mozilla@e.mozilla.org u vaš adresar kako biste osigurali da naši emailovi uvijek dospiju u vaš inbox.
 
 
