--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -126,23 +126,23 @@ Brz, brz, brz. <a %s>Firefox za Android je upravo dobio veliku nadogradnju</a>. 
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox ima nove mogućnosti koje će vam pomoći da svoje zadatke još brže izvršavate! <a href="%">Pogledajte video da saznate više.</a>
 
 
 ;Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
-Love Firefox Beta? <a href="%s">Invite your friends</a> to get a sneak peek of what's coming soon to Firefox.
+Volite Firefox Beta? <a href="%s">Pozovite svoje prijatelje</a> da se i sami upoznaju sa novostima koje će uskoro biti dostupne u Firefoxu.
 
 
 ;I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
-I use Firefox Beta to get a sneak peek at the latest features and innovations coming soon to Firefox. <a href="%s">Check it out</a>.
+Ja koristim Firefox Beta da se upoznam sa najnovijim mogućnostima i inovacijama koje će uskoro biti dostupne u Firefoxu. <a href="%s">Provjerite i sami</a>.
 
 
 ;Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
-Thanks for using Firefox Beta to help make Firefox more awesome. Now <a href="%s">invite your friends</a> to give it a try.
+Hvala što koristite Firefox Beta i tako nam pomažete da učinimo Firefox još boljim. Sada <a href="%s">pozovite svoje prijatelje</a> da ga i sami isprobaju.
 
 
 ;I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
-I use Firefox Beta to help test the latest features and make Firefox more awesome. <a href="%s">Give it a try</a>.
+Ja koristim Firefox Beta kako bih pomogao sa testiranjem najnovijih mogućnosti te da učinimo Firefox još boljim. <a href="%s">Isprobajte ga</a>.
 
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
