--- a/bs/whatsnew.lang
+++ b/bs/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Ura! Koristite najnoviju verziju Firefoxa.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Vaš Firefox je zastario.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Iz sigurnosnih razloga, toplo preporučujemo nadogradnju na <a href="{url}">najnoviju i najbolju verziju</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Vi koristite nepoznatu verziju Firefoxa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Iz sigurnosnih razloga, toplo preporučujemo preuzimanje <a href="{url}">najnovije i najbolje verzije</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Izvršavajte svoje zadatke<br/>brže nego ikad
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Pogledajte kako vam nove mogućnosti Firefoxa pomažu da brže i efikasnije surfate.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Naučite više o <a href="{url}">o Novi tab opciji »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Naučite više o našoj <a href="{url}">redizajniranoj početnoj stranici »</a>
 
 
 ;Keep in touch
-Keep in touch
+Ostanite u kontaktu
 
 
 ;Keep it moving
-Keep it moving
+Osvježite ga
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Preuzmite Firefox » <b>za Android</b>
 
 
 ;Keep it going
-Keep it going
+Održavajte ga
 
 
 ;Join Mozilla
-Join Mozilla
+Pridružite se Mozilli
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot je reproduciran iz rada koji je kreirao i <a href="%s">podijelio Google</a> i korišten je u skladu sa pravilima opisanim u <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
