l10n: or, translation updates by Manoj Kumar Giri
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@106990 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/or/whatsnew.lang
+++ b/or/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+ହୁର...ରେ! ଆପଣଙ୍କର Firefox ଅଦ୍ୟତିତ ହୋଇଛି।
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+ଆପଣଙ୍କର Firefox ପୁରୁଣା ହୋଇଯାଇଛି।
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+ସୁରକ୍ଷା ଦୃଷ୍ଟିକୋଣରୁ, ଆମେ <a href="{url}">ନୂତନତମ ଏବଂ ବୃହତ ସଂସ୍କରଣ</a> କୁ ଉନ୍ନୟନ କରିବା ପାଇଁ ପରାମର୍ଶ ଦେଇଥାଉ।
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+ଆପଣ Firefox ର ଏକ ଅଜଣା ସଂସ୍କରଣକୁ ବ୍ୟବହାର କରୁଛନ୍ତି।
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+ସୁରକ୍ଷା ଦୃଷ୍ଟିକୋଣରୁ, ଆମେମାନେ <a href="{url}">ନୂତନତମ ଏବଂ ବୃହତ ସଂସ୍କରଣ</a> କୁ ଆହରଣ କରିବା ପାଇଁ ପରାମର୍ଶ ଦେଇଥାଉ।
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+ଆପଣଙ୍କର ପରବର୍ତ୍ତୀ କାର୍ଯ୍ୟକୁ <br/>ଯଥାଶିଘ୍ର ଯାଆନ୍ତୁ
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Firefox ରେ ନୂତନ ବିଶେଷତାଗୁଡ଼ିକ କିପରି ତୀବ୍ର ଏବଂ ଅଧିକ ଦକ୍ଷତାର ସହିତ ବ୍ରାଉଜ କରିଥାଏ ତାହା ଦେଖନ୍ତୁ।
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">ନୂତନ ଟ୍ୟାବ ବିଶେଷତା »</a> ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+ଆମର <a href="{url}">ପୁନଃନିର୍ମିତ ମୂଖ୍ୟ ପୃଷ୍ଠା »</a> ବିଷୟରେ ଅଧିକ ଜାଣନ୍ତୁ
 
 
 ;Keep in touch
-Keep in touch
+ସଂସ୍ପର୍ଷରେ ରୁହନ୍ତୁ
 
 
 ;Keep it moving
-Keep it moving
+ଏହାକୁ ଆଗକୁ ନେଇ ଚାଲନ୍ତୁ
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Firefox ଆଣନ୍ତୁ » <b>ଏଣ୍ଡ୍ରଏଡ ପାଇଁ</b>
 
 
 ;Keep it going
-Keep it going
+ଏହାକୁ ଆଗକୁ ନିଅନ୍ତୁ
 
 
 ;Join Mozilla
-Join Mozilla
+Mozilla ରେ ଅଂଶଗ୍ରହଣ କରନ୍ତୁ
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+ଏଣ୍ଡ୍ରଏଡ  ରବୋର୍ଟ <a href="%s">Google ଦ୍ୱାରା ସହଭାଗୀ</a> ଏବଂ ନିର୍ମିତ କାର୍ଯ୍ୟରୁ ଉତ୍ପନ୍ନ ହୋଇଥିଲା ଏବଂ  <a href="%s">Creative Commons 3.0 Attribution License</a> ଅନ୍ତର୍ଗତରେ ବର୍ଣ୍ଣନା କରାଯାଇଥିବା ନିୟମାବଳୀ ଅନୁସାରେ ବ୍ୟବହୃତ ହୋଇଥାଏ।
 
 
